create the analyser application

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+    <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    {% block head %} {% endblock %}
     <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
