--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,3 +1,67 @@
-h1 {
-    color: brown;
+body {
+    background-color: #ffffff;
+
+
 }
+
+.btn{
+    font-family: "Roboto", sans-serif;
+    font-size: 23px;
+    font-weight: bold;
+    background: #238fc3;
+    width: 300px;
+    padding: 20px ;
+    text-align: center;
+    text-decoration: none;
+    color: #fff ;
+    border-radius: 5px  ;
+    cursor: pointer ;
+    box-shadow:  rgba(0, 0, 0, 0.1);
+    -webkit-transition-duration: 0.3s;
+    -webkit-transition-property: box-shadow, transform;
+    top: 69%;
+    left:5%;
+    position: absolute;
+
+}
+.btn:hover, .btn:focus, .btn:active{
+    box-shadow: 0 0 20px rgba(0,0,0,0.5);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
+.img {
+    width: 353px;
+    height: 438px;
+    border-radius: 23px;
+    top:10%;
+    left:60%;
+    position: absolute;
+}
+.Analyzingproject {
+    /* width: 1000px; */
+    height: 79px;
+    color:#238fc3 ;
+    font-size: 55px;
+    font-family: Roboto;
+    font-weight: 700;
+    word-wrap: break-word;
+    position: absolute;
+    top: 20%;
+    left: 5%;
+
+}
+.teams{
+    width: 900px;
+    height: 79px;
+    color: #238fc3;
+    font-size: 28px;
+    font-family: Roboto;
+    font-weight: 700;
+    word-wrap: break-word;
+    position: absolute;
+    top:38% ;
+    left: 5%;
+}
+
+
+
