--- a/app/templates/explore_data.html
+++ b/app/templates/explore_data.html
@@ -2,7 +2,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    Results
+    Explore Data
 {% endblock %}
 
 
@@ -17,23 +17,23 @@
 {% block content %}
 
 <nav class="sidebar">
-    <a href="#" class="logo">Results</a>
+    <a href="#" class="logo">Explore Data</a>
 
     <div class="menu-content">
       <ul class="menu-items">
         <!-- Back Button -->
         <li class="back-button">
-          <a href="/home"><i class="fas fa-arrow-left"></i> Back</a>
+          <a href="home"><i class="fas fa-arrow-left"></i> Back</a>
         </li>
         <!-- Menu Items -->
         <li class="item">
           <a href="#DataOverview"><i class="fas fa-chart-pie"></i> Data Overview</a>
         </li>
         <li class="item">
-          <a href="#heat_map"><i class="fas fa-eye"></i>Visualization</a>
+          <a href="#heat_map"><i class="fas fa-chart-line"></i>Heatmap</a>
         </li>
         <li class="item">
-          <a href="#corr_matrix"><i class="fas fa-chart-line"></i> Testing Model</a>
+          <a href="#corr_matrix"><i class="fas fa-eye"></i> Correlation</a>
         </li>
         <li class="item">
           <a href="#boxplot"><i class="fas fa-filter"></i> Box Plot</a>
@@ -72,44 +72,69 @@
         }
     </style>
     <table>
-        <thead>
+      <thead>
+        <tr>
+            <th>Nulls count</th>
+            <th></th>
+        </tr>
+    </thead>
+      <thead>
             <tr>
-                <th>Statistics</th>
-                <th>Value</th>
+                <th>Column Name</th>
+                <th>Null Count</th>
             </tr>
         </thead>
         <tbody>
-            <!-- [r2,mae,mse,r2e] -->
-            <tr>
-                <td>R-squared</td>
-                <td>{{ model_stats[0] }}</td>
-            </tr>
-            <tr>
-                <td>MAE</td>
-                <td>{{ model_stats[1] }}</td>
-            </tr>
-            <tr>
-                <td>MSE</td>
-                <td>{{ model_stats[2] }}</td>
-            </tr>
-            <tr>
-                <td>R2E</td>
-                <td>{{ model_stats[3] }}</td>
-            </tr>
+
+        {% for key, value in info['null_count'].items() %}
+        <tr>
+                <td>{{ key }}</td>
+                <td>{{ value }}</td>
+            </tr>            
+            {% endfor %}
         </tbody>
     </table>
+    <table>
+      <thead>
+        <tr>
+            <th>Nulls count</th>
+            <th></th>
+        </tr>
+    </thead>
+      <thead>
+            <tr>
+                <th>Column Name</th>
+                <th>Null Count</th>
+            </tr>
+        </thead>
+        <tbody>
+
+        {% for title, stats in info['description'].items() %}
+        <tr>
+          <td>{{ title }}</td>
+      
+          {% for key, value in stats.items() %}
+                <td>{{ key }}</td>
+                <td>{{ value }}</td>
+        {% endfor %}
+        </tr>            
+        {% endfor %}
+        </tbody>
+    </table>
+
   </div>
   <div id="heat_map" class="details" style="display: none;">
-    {{reg_plot|safe}}
+    {{heat_map|safe}}
   </div>
   <div id="corr_matrix" class="details" style="display: none;">
-    {{learning_curve|safe}}
-</div>
+    {{corr_matrix|safe}}
+  </div>
   <div id="boxplot" class="details" style="display: none;">
+    {{boxplot|safe}}
+  </div>
+  <div id="histograms" class="details" style="display: none;">
     {{histograms|safe}}
-</div>
-  <div id="histograms" class="details" style="display: none;"> 
-  </div> 
+  </div>
 
   <!-- <div id="Data Sources" class="details"></div> -->
   </div>
