--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,11 +10,11 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
 {% endblock %}
 
-<div class="img">
-    <img src="../static/images/Premium Vector _ Business team, statistical data analysis, deadline.jpeg" alt="Management Image">
+<div class="img animated-img">
+    <img src="../static/images/index.png" alt="Management Image">
 </div>
-<div class="Analyzingproject"> Regressoin Analyser</div>
-<div class="teams">
+<div class="title animated-title"> Regressoin Analyser</div>
+<div class="description animated-description">
     Unravel the hidden relationships within your datasets with Regression Analyzer, the ultimate tool for data exploration and analysis. Whether you're a seasoned data scientist or a novice analyst, this intuitive app empowers you to delve deep into your data, extract meaningful insights, and make informed decisions.
 </div>
 
@@ -22,7 +22,7 @@
 
     <!-- <a href="#" id="start-btn" class="btn">  </a> -->
     <input  id = 'file-picker' type="file" name="file" hidden  multiple>
-    <label for="file-picker" class="btn">Start journy</label>
+    <label for="file-picker" class="animated-btn btn">Start journy</label>
     <input id="sub-btn" type="submit" value="Upload" title="Upload your data" hidden>
 </form>
 
@@ -38,50 +38,6 @@
             }
         })
 
-
-
-    // // Variable to track if file picker has been opened
-    // let filePickerOpened = false;
-  
-    // // Function to handle click on the link
-    // function handleClick(event) {
-    //   event.preventDefault(); // Prevent default link behavior
-      
-    //   if (!filePickerOpened) {
-    //     // Open file picker
-    //     const fileInput = document.createElement('input');
-    //     fileInput.type = 'file';
-    //     fileInput.addEventListener('change', handleFileSelect);
-    //     fileInput.click();
-  
-    //     filePickerOpened = true; // Set flag to true
-    //   } else {
-    //     alert('Please select a file before clicking again to upload.'); // Provide feedback if clicked again without selecting a file
-    //   }
-    // }
-  
-    // // Function to handle file selection
-    // function handleFileSelect(event) {
-    //   const selectedFile = event.target.files[0];
-    //   fetch('/', {
-    //   method: 'POST',
-    //   body: selectedFile,
-    // })
-    // .then(response => response.json())
-    // .then(data => {
-    //   // Handle the response from the server
-    //   console.log(data);
-    // })
-    // .catch(error => {
-    //   // Handle the error
-    //   console.error(error);
-    // });
-    //   filePickerOpened = false;
-    // }
-  
-    // // Add event listener to the link
-    // const filePickerLink = document.getElementById('filePicker');
-    // filePickerLink.addEventListener('click', handleClick);
   </script>
 
 {% endblock %}
