--- a/app/static/css/loading.css
+++ b/app/static/css/loading.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300); /*made by Y.s*/
 body {
-  background-color: #79c2d0 ;
+  /* background-color: #79c2d0 ; */
   overflow: hidden;
 }
 
@@ -8,11 +8,13 @@ h1 {
   position: absolute;
   font-family: "Open Sans";
   font-weight: 600;
-  font-size: 12px;
+  font-size: 15px;
   text-transform: uppercase;
-  left: 50%;
+  font-weight: bold;
+  left: 48%;
   top: 58%;
   margin-left: -20px;
+  color: #007bff;
 }
 
 .body {
@@ -25,7 +27,7 @@ h1 {
 .body > span {
   height: 5px;
   width: 35px;
-  background: #000;
+  background: #007bff;
   position: absolute;
   top: -19px;
   left: 60px;
@@ -37,7 +39,7 @@ h1 {
   width: 0;
   height: 0;
   border-top: 6px solid transparent;
-  border-right: 100px solid #000;
+  border-right: 100px solid #007bff;
   border-bottom: 6px solid transparent;
 }
 .base span:before {
@@ -45,7 +47,7 @@ h1 {
   height: 22px;
   width: 22px;
   border-radius: 50%;
-  background: #000;
+  background: #007bff;
   position: absolute;
   right: -110px;
   top: -16px;
@@ -56,7 +58,7 @@ h1 {
   width: 0;
   height: 0;
   border-top: 0 solid transparent;
-  border-right: 55px solid #000;
+  border-right: 55px solid #007bff;
   border-bottom: 16px solid transparent;
   top: -16px;
   right: -98px;
@@ -66,7 +68,7 @@ h1 {
   position: absolute;
   height: 12px;
   width: 20px;
-  background: #000;
+  background: #007bff;
   border-radius: 20px 20px 0 0;
   transform: rotate(-40deg);
   right: -125px;
@@ -76,7 +78,7 @@ h1 {
   content: "";
   height: 12px;
   width: 12px;
-  background: #000;
+  background: #007bff;
   right: 4px;
   top: 7px;
   position: absolute;
@@ -91,7 +93,7 @@ h1 {
 .body > span > span:nth-child(4) {
   width: 30px;
   height: 1px;
-  background: #000;
+  background: #007bff;
   position: absolute;
   animation: fazer1 0.2s linear infinite;
 }
@@ -193,7 +195,7 @@ h1 {
   position: absolute;
   height: 2px;
   width: 20%;
-  background: #000;
+  background: #007bff;
 }
 .longfazers span:nth-child(1) {
   top: 20%;
