--- a/app/static/css/model_selection.css
+++ b/app/static/css/model_selection.css
@@ -6,16 +6,16 @@ body {
 }
 
 /* Background animation */
-.background {
-  position: fixed;
+/* .background {
+   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to bottom, #ABD8F7, #5D4037); /* Gradient background */
-  animation: backgroundAnimation 20s infinite alternate; /* Background animation */
-  z-index: -1; /* Ensure it's behind other content */
-}
+  background: linear-gradient(to bottom, #ABD8F7, #5D4037); 
+  animation: backgroundAnimation 20s infinite alternate; 
+  z-index: -1;  
+} */
 
 @keyframes backgroundAnimation {
   0% { background-position: 0 0; }
@@ -27,7 +27,6 @@ body {
   font-family: "Raleway";
   font-size: 48px;
   font-weight: 700;
-  color: #fff; /* White color */
   text-align: center;
   text-transform: uppercase; /* Uppercase text */
   margin-top: 80px; /* Adjust margin for spacing */
