--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.8">
+    <link rel="icon" href="{{ url_for('static', filename='/images/icon.png') }}">
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     {% block head %} {% endblock %}
     <title>{% block title %} {% endblock %}</title>
