--- a/app/templates/loading.html
+++ b/app/templates/loading.html
@@ -33,7 +33,7 @@
       <span></span>
     </div>
   </div>
-  <h1>Redirecting</h1>
+  <h1>Getting Things Ready</h1>
 
 
   <script src=""></script>
